--- a/template/vtg-ipaas-node12/Dockerfile
+++ b/template/vtg-ipaas-node12/Dockerfile
@@ -1,6 +1,8 @@
 FROM openfaas/of-watchdog:0.7.2 as watchdog
 FROM node:12.13.0-alpine as ship
 
+# OLA KAYKE
+
 COPY --from=watchdog /fwatchdog /usr/bin/fwatchdog
 RUN chmod +x /usr/bin/fwatchdog
 
