java/maven uniqueversion for snapshots

--- a/template/vtg-ipaas-java8-maven/function/pom.xml
+++ b/template/vtg-ipaas-java8-maven/function/pom.xml
@@ -94,7 +94,8 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
+			    <classpathPrefix>lib/</classpathPrefix>
+			    <useUniqueVersions>false</useUniqueVersions>
                             <mainClass>com.github.vertigobr.openfaas.entrypoint.App</mainClass>
                         </manifest>
                     </archive>
