--- a/template/vtg-ipaas-java11-maven/function/pom.xml
+++ b/template/vtg-ipaas-java11-maven/function/pom.xml
@@ -33,7 +33,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.release>11</maven.compiler.release>
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
@@ -63,7 +63,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>${maven.compiler.release}</release>
+                    <maven.compiler.source>${java.version}</maven.compiler.source>
+                    <maven.compiler.target>${java.version}</maven.compiler.target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
@@ -91,8 +92,8 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-			    <classpathPrefix>lib/</classpathPrefix>
-			    <useUniqueVersions>false</useUniqueVersions>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <useUniqueVersions>false</useUniqueVersions>
                             <mainClass>com.github.vertigobr.openfaas.entrypoint.App</mainClass>
                         </manifest>
                     </archive>
