--- a/template/nodered/function/package.json
+++ b/template/nodered/function/package.json
@@ -1,16 +1,20 @@
 {
-    "name": "node-red-project",
-    "description": "A Node-RED Project",
+    "name": "Hello",
+    "description": "Hello World",
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "node-red": "1.0.6",
-        "node-red-node-mysql": "~0.1.0",
-        "pm2": "^4.4.0"
+        "node-red": "1.0.6"
+    },
+    "node-red": {
+        "settings": {
+            "flowFile": "flow.json",
+            "credentialsFile": "flow_cred.json"
+        }
     },
     "scripts": {
-        "start": "node node_modules/node-red/red.js -u /data flows.json",
-        "test": "node node_modules/node-red/red.js -u $(pwd) flows.json",
-	"svc": "node node_modules/pm2/bin/pm2 start 'yarn start'"
+        "start": "node node_modules/node-red/red.js -u /data flow.json",
+        "test": "node node_modules/node-red/red.js -u $(pwd) flow.json",
+        "svc": "node node_modules/pm2/bin/pm2 start 'yarn start'"
     }
 }
