--- a/template/nodered/Dockerfile
+++ b/template/nodered/Dockerfile
@@ -1,6 +1,7 @@
 FROM nodered/node-red:latest-minimal
 USER root
-WORKDIR /data
+WORKDIR /usr/src/node-red
+COPY flow.json /data/flow.json
 COPY function/ .
 RUN yarn install
 HEALTHCHECK --interval=3s CMD ["curl","http://localhost:8080/_/health"]
