--- a/template/nodered/Dockerfile
+++ b/template/nodered/Dockerfile
@@ -2,7 +2,7 @@ FROM nodered/node-red:latest-minimal
 
 # Copy package.json to the WORKDIR so npm builds all
 # of your added nodes modules for Node-RED
-COPY package.json .
+COPY function/package.json .
 RUN npm install --unsafe-perm --no-update-notifier --no-fund --only=production
 
 # Copy _your_ Node-RED project files into place
